# RayTracing

./: .gitignore  README.md
src/: BVH.cpp  BVH.h  Bounds3.h  CMakeLists.txt  Camera.h  Intersection.h  Material.h  Mesh.h  OBJ_Loader.h  Object.h  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Sphere.h  Triangle.h  Vector.h  global.h  main.cpp  stb_image_write.h
